--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,19 +3,16 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "dresshuupi.ico",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src": "dresshuupi.png",
+      "type": "image/png"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "dresshuupi.png",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
