--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.0.2",
+    "@types/node": "^18.7.18",
+    "@types/react": "^18.0.20",
+    "@types/react-dom": "^18.0.6",
     "dotenv": "^16.0.2",
     "firebase": "^9.6.11",
     "react": "^18.0.0",
@@ -25,6 +29,7 @@
     "sass": "^1.50.1",
     "stripe": "^10.7.0",
     "styled-components": "^5.3.5",
+    "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
