--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^18.7.18",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
+    "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.0.2",
     "firebase": "^9.6.11",
     "react": "^18.0.0",
@@ -29,6 +30,7 @@
     "sass": "^1.50.1",
     "stripe": "^10.7.0",
     "styled-components": "^5.3.5",
+    "typed-redux-saga": "^1.5.0",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
